--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -63,6 +63,13 @@ hr.small {
   font-weight: 800;
   letter-spacing: 1px;
 }
+.nav .dropdown .dropdown-menu a {
+  color: black;
+}
+.nav .dropdown .dropdown-menu a:hover,
+.nav .dropdown .dropdown-menu a:focus {
+  color: #0085a1;
+}
 @media only screen and (min-width: 768px) {
   .navbar-custom {
     background: transparent;
