--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -341,7 +341,7 @@ footer {
 		-ms-transition: top 0.3s ease,opacity 0.3s ease;
 		transition: top 0.3s ease,opacity 0.3s ease;
 	}
-	&::not(:first-child) {
+	&:not(:first-child) {
 		padding-left: 14px;
 		border-left: 1px solid @gray-light;
 	}
