Fix some little bugs and improve primary stylesheet

--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -224,9 +224,8 @@ hr.small {
   margin-bottom: 10px;
 }
 .post-preview > a > .post-subtitle {
-  margin: 0;
+  margin:0 0 10px;
   font-weight: 300;
-  margin-bottom: 10px;
 }
 .post-preview > .post-meta {
   color: #808080;
@@ -303,7 +302,6 @@ footer .copyright {
   margin: 0;
   font-size: 0.85em;
   line-height: 1.764705882em;
-  vertical-align: middle;
   vertical-align: baseline;
   opacity: 0;
   -webkit-transition: top 0.3s ease,opacity 0.3s ease;
@@ -311,7 +309,7 @@ footer .copyright {
   -ms-transition: top 0.3s ease,opacity 0.3s ease;
   transition: top 0.3s ease,opacity 0.3s ease;
 }
-.floating-label-form-group::not(:first-child) {
+.floating-label-form-group:not(:first-child) {
   padding-left: 14px;
   border-left: 1px solid #eeeeee;
 }
