--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -243,9 +243,8 @@ hr.small {
 			margin-bottom: 10px;
 		}
 		> .post-subtitle {
-			margin: 0;
+			margin: 0 0 10px;
 			font-weight: 300;
-			margin-bottom: 10px;
 		}
 	}
 	> .post-meta {
@@ -333,7 +332,6 @@ footer {
 		margin: 0;
 		font-size: 0.85em;
 		line-height: 1.764705882em;
-		vertical-align: middle;
 		vertical-align: baseline;
 		opacity: 0;
 		-webkit-transition: top 0.3s ease,opacity 0.3s ease;
@@ -341,7 +339,7 @@ footer {
 		-ms-transition: top 0.3s ease,opacity 0.3s ease;
 		transition: top 0.3s ease,opacity 0.3s ease;
 	}
-	&::not(:first-child) {
+	&:not(:first-child) {
 		padding-left: 14px;
 		border-left: 1px solid @gray-light;
 	}
