--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -107,6 +107,15 @@ hr.small {
 						color: fade(white, 80%);
 					}
 				}
+				ul.dropdown-menu {
+					a {
+						color: @gray-dark;
+						&:hover,
+						&:focus {
+							color: @theme-primary;
+						}
+					}
+				}
 			}
 		}
 	}
