--- a/less/clean-blog.less
+++ b/less/clean-blog.less
@@ -50,6 +50,8 @@ blockquote {
 // Navigation
 #mainNav {
     background-color: white;
+    border-bottom: 1px solid @gray-lighter;
+    position: absolute;
     .sans-serif-font;
     .navbar-brand {
         color: @gray-light;
