--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -3,40 +3,40 @@
     font-size: 14px;
     position: relative;
     margin-bottom: 0;
-    padding-bottom: 0.5em;
+    padding-bottom: .5em;
     border-bottom: 1px solid $gray-lighter;
     input,
     textarea {
-        z-index: 1;
+        font-size: 1.5em;
         position: relative;
+        z-index: 1;
         padding: 0;
+        resize: none;
         border: none;
         border-radius: 0;
-        font-size: 1.5em;
         background: none;
         box-shadow: none !important;
-        resize: none;
         @include serif-font;
         &::-webkit-input-placeholder {
-            @include serif-font;
             color: $gray-light;
+            @include serif-font;
         }
     }
     label {
-        display: block;
-        z-index: 0;
-        position: relative;
-        top: 2em;
-        margin: 0;
-        font-size: 0.85em;
+        font-size: .85em;
         line-height: 1.764705882em;
+        position: relative;
+        z-index: 0;
+        top: 2em;
+        display: block;
+        margin: 0;
+        -webkit-transition: top .3s ease, opacity .3s ease;
+        -moz-transition: top .3s ease, opacity .3s ease;
+        -ms-transition: top .3s ease, opacity .3s ease;
+        transition: top .3s ease, opacity .3s ease;
         vertical-align: middle;
         vertical-align: baseline;
         opacity: 0;
-        -webkit-transition: top 0.3s ease, opacity 0.3s ease;
-        -moz-transition: top 0.3s ease, opacity 0.3s ease;
-        -ms-transition: top 0.3s ease, opacity 0.3s ease;
-        transition: top 0.3s ease, opacity 0.3s ease;
     }
     .help-block {
         margin: 15px 0;
