--- a/scss/_navbar.scss
+++ b/scss/_navbar.scss
@@ -1,36 +1,36 @@
 // Styling for the navbar
 #mainNav {
-    background-color: white;
-    border-bottom: 1px solid $gray-lighter;
     position: absolute;
+    border-bottom: 1px solid $gray-lighter;
+    background-color: white;
     @include sans-serif-font;
     .navbar-brand {
-        color: $gray-light;
         font-weight: 800;
+        color: $gray-light;
     }
     .navbar-toggler {
-        color: $gray-light;
-        font-weight: 800;
-        text-transform: uppercase;
         font-size: 12px;
+        font-weight: 800;
         padding: 13px;
+        text-transform: uppercase;
+        color: $gray-light;
     }
     .navbar-nav {
         > li.nav-item {
             > a {
-                text-transform: uppercase;
                 font-size: 12px;
                 font-weight: 800;
                 letter-spacing: 1px;
+                text-transform: uppercase;
             }
         }
     }
     @media only screen and (min-width: 992px) {
-        background: transparent;
         border-bottom: 1px solid transparent;
+        background: transparent;
         .navbar-brand {
-            color: white;
             padding: 15px 20px;
+            color: white;
             &:hover,
             &:focus {
                 color: fade-out(white, .2);
@@ -39,8 +39,8 @@
         .navbar-nav {
             > li.nav-item {
                 > a {
-                    color: white;
                     padding: 15px 20px;
+                    color: white;
                     &:hover,
                     &:focus {
                         color: fade-out(white, .2);
@@ -50,9 +50,9 @@
         }
     }
     @media only screen and (min-width: 1170px) {
-        -webkit-transition: background-color 0.2s;
-        -moz-transition: background-color 0.2s;
-        transition: background-color 0.2s;
+        -webkit-transition: background-color .2s;
+        -moz-transition: background-color .2s;
+        transition: background-color .2s;
         /* Force Hardware Acceleration in WebKit */
         -webkit-transform: translate3d(0, 0, 0);
         -moz-transform: translate3d(0, 0, 0);
@@ -64,11 +64,11 @@
             /* when the user scrolls down, we hide the header right above the viewport */
             position: fixed;
             top: -77px;
-            background-color: fade-out(white, .1);
+            -webkit-transition: -webkit-transform .2s;
+            -moz-transition: -moz-transform .2s;
+            transition: transform .2s;
             border-bottom: 1px solid darken(white, .05);
-            -webkit-transition: -webkit-transform 0.2s;
-            -moz-transition: -moz-transform 0.2s;
-            transition: transform 0.2s;
+            background-color: fade-out(white, .1);
             .navbar-brand {
                 color: $gray-dark;
                 &:hover,
