--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -1,28 +1,28 @@
 // Bootstrap overrides for this template
 .btn {
-    font-size: 14px;
-    font-weight: 800;
-    padding: 15px 25px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    border-radius: 0;
-    @include sans-serif-font;
+  font-size: 14px;
+  font-weight: 800;
+  padding: 15px 25px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  border-radius: 0;
+  @include sans-serif-font;
 }
 
 .btn-primary {
-    @include button-variant(white, $theme-primary, $theme-primary);
+  @include button-variant(white, $theme-primary, $theme-primary);
 }
 
 .btn-lg {
-    font-size: 16px;
-    padding: 25px 35px;
+  font-size: 16px;
+  padding: 25px 35px;
 }
 
 .btn-default {
-    &:hover,
-    &:focus {
-        color: white;
-        border: 1px solid $theme-primary;
-        background-color: $theme-primary;
-    }
+  &:focus,
+  &:hover {
+    color: white;
+    border: 1px solid $theme-primary;
+    background-color: $theme-primary;
+  }
 }
