--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,61 +1,60 @@
 // Styling for the contact page
 .floating-label-form-group {
-    font-size: 14px;
+  font-size: 14px;
+  position: relative;
+  margin-bottom: 0;
+  padding-bottom: 0.5em;
+  border-bottom: 1px solid $gray-lighter;
+  input,
+  textarea {
+    font-size: 1.5em;
     position: relative;
-    margin-bottom: 0;
-    padding-bottom: .5em;
-    border-bottom: 1px solid $gray-lighter;
-    input,
-    textarea {
-        font-size: 1.5em;
-        position: relative;
-        z-index: 1;
-        padding: 0;
-        resize: none;
-        border: none;
-        border-radius: 0;
-        background: none;
-        box-shadow: none !important;
-        @include serif-font;
-        &::-webkit-input-placeholder {
-            color: $gray-light;
-            @include serif-font;
-        }
+    z-index: 1;
+    padding: 0;
+    resize: none;
+    border: none;
+    border-radius: 0;
+    background: none;
+    box-shadow: none !important;
+    @include serif-font;
+    &::-webkit-input-placeholder {
+      color: $gray-light;
+      @include serif-font;
     }
-    label {
-        font-size: .85em;
-        line-height: 1.764705882em;
-        position: relative;
-        z-index: 0;
-        top: 2em;
-        display: block;
-        margin: 0;
-        -webkit-transition: top .3s ease, opacity .3s ease;
-        -moz-transition: top .3s ease, opacity .3s ease;
-        -ms-transition: top .3s ease, opacity .3s ease;
-        transition: top .3s ease, opacity .3s ease;
-        vertical-align: middle;
-        vertical-align: baseline;
-        opacity: 0;
-    }
-    .help-block {
-        margin: 15px 0;
-    }
+  }
+  label {
+    font-size: 0.85em;
+    line-height: 1.764705882em;
+    position: relative;
+    z-index: 0;
+    top: 2em;
+    display: block;
+    margin: 0;
+    -webkit-transition: top 0.3s ease, opacity 0.3s ease;
+    -moz-transition: top 0.3s ease, opacity 0.3s ease;
+    -ms-transition: top 0.3s ease, opacity 0.3s ease;
+    transition: top 0.3s ease, opacity 0.3s ease;
+    vertical-align: middle;
+    vertical-align: baseline;
+    opacity: 0;
+  }
+  .help-block {
+    margin: 15px 0;
+  }
 }
 
 .floating-label-form-group-with-value {
-    label {
-        top: 0;
-        opacity: 1;
-    }
+  label {
+    top: 0;
+    opacity: 1;
+  }
 }
 
 .floating-label-form-group-with-focus {
-    label {
-        color: $theme-primary;
-    }
+  label {
+    color: $theme-primary;
+  }
 }
-
 form .form-group:first-child .floating-label-form-group {
-    border-top: 1px solid $gray-lighter;
+  border-top: 1px solid $gray-lighter;
 }
