--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -349,3 +349,17 @@ footer {
   color: white;
   border: 1px solid #0085A1;
   background-color: #0085A1; }
+  
+  .team-member {
+    margin-bottom: 50px;
+    text-align: center; }
+    .team-member img {
+      width: 225px;
+      height: 225px;
+      border: 7px solid white; }
+    .team-member h4 {
+      margin-top: 25px;
+      margin-bottom: 0;
+      text-transform: none; }
+    .team-member p {
+      margin-top: 0; }
