--- a/scss/_bootstrap-overrides.scss
+++ b/scss/_bootstrap-overrides.scss
@@ -25,3 +25,19 @@
   font-size: 16px;
   padding: 25px 35px;
 }
+
+.dropdown-header {
+  padding: .2rem 1.0rem;
+  font-size: .875rem;
+  color: #6c757d;
+  border-top: 1px solid $gray-300;
+  border-bottom: 1px solid $gray-300;
+}
+
+a.dropdown-item:hover {
+  background-color: $blue;
+}
+
+a.nav-link:hover {
+  color: $blue;
+}
